--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
     <script src="main.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body><div>
+    Введите размер 1 прямоугольника<input type="text" id = 'm1' value="150"><input type="text" id = 'm11' value="200">
+    Введите размер 2 прямоугольника<input type="text" id = 'm2'value="200"><input type="text" id = 'm22'value="250">
+    Введите размер 3 прямоугольника<input type="text" id = 'm3'value="150"><input type="text" id = 'm33'value="330">
+    Введите размер 4 прямоугольника<input type="text" id = 'm4'value="100"><input type="text" id = 'm44'value="220">
+    Введите размер 5 прямоугольника<input type="text" id = 'm5'value="300"><input type="text" id = 'm55'value="150">
+    
+
+</div>
+<div><button id='button' onclick= "toJsonData()" >convert to</button></div>
+<div><button id='button1' >Clear</button></div>
         <div >
             <!-- <canvas id="canvas" height="500" width="200"> -->
                 
