--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,21 +8,30 @@
     <script src="main.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
-<body><div>
-    Введите размер 1 прямоугольника<input type="text" id = 'm1' value="150"><input type="text" id = 'm11' value="200">
-    Введите размер 2 прямоугольника<input type="text" id = 'm2'value="200"><input type="text" id = 'm22'value="250">
-    Введите размер 3 прямоугольника<input type="text" id = 'm3'value="150"><input type="text" id = 'm33'value="330">
-    Введите размер 4 прямоугольника<input type="text" id = 'm4'value="100"><input type="text" id = 'm44'value="220">
-    Введите размер 5 прямоугольника<input type="text" id = 'm5'value="300"><input type="text" id = 'm55'value="150">
-    
 
-</div>
-<div><button id='button' onclick= "toJsonData()" >convert to</button></div>
-<div><button id='button1' >Clear</button></div>
-        <div >
-            <!-- <canvas id="canvas" height="500" width="200"> -->
-                
-            </canvas>
-        </div>
+<body>
+    <div> Введите размер 1 прямоугольника<input type="text" id='m1' value="150"><input type="text" id='m11' value="200">
+    </div>
+    <div>Введите размер 2 прямоугольника<input type="text" id='m2' value="200"><input type="text" id='m22' value="250">
+    </div>
+    <div> Введите размер 3 прямоугольника<input type="text" id='m3' value="150"><input type="text" id='m33' value="330">
+    </div>
+    <div> Введите размер 4 прямоугольника<input type="text" id='m4' value="100"><input type="text" id='m44' value="220">
+    </div>
+    <div>Введите размер 5 прямоугольника<input type="text" id='m5' value="300"><input type="text" id='m55' value="150">
+    </div>
+    <div>Введите размер емкости<input type="text" id='m6' value="599"><input type="text" id='m66' value="1000"></div>
+
+
+
+    </div>
+    <div><button id='button' onclick="toJsonData()">Расчитать</button></div>
+    <div><button id='button1'>Clear</button></div>
+    <div>
+   
+
+        </canvas>
+    </div>
 </body>
+
 </html>
